the last update of the day

--- a/index.html
+++ b/index.html
@@ -20,23 +20,11 @@
                 <li><a href="#testimonials">Testimonials</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-            <button class="menu-toggle" id="menuToggle">☰</button>
+            <button class="menu-toggle" id="menuToggle" aria-label="Toggle menu">☰</button>
         </nav>
     </header>
 
     <section class="hero" id="home">
-        <!-- <div class="carousel-container">
-            <div class="carousel-slide active">
-                <img src="IMG_20180928_175219.jpg" alt="Construction site with building materials">
-            </div>
-            <div class="carousel-slide">
-                <img src="18c84c24-a517-4bf5-a7cb-42abbbc0ba7a.jpg" alt="Exhauster service truck">
-            </div>
-            <div class="carousel-slide">
-                <img src="IMG_20181231_135930.jpg" alt="Building materials delivery">
-            </div>
-        </div> -->
-
         <div class="hero-content">
             <h1>ALMUWA Enterprises</h1>
             <p>Dealers in Exhauster Services & Building Materials</p>
@@ -45,32 +33,21 @@
                 <a href="#contact" class="cta-button">Get a Quote</a>
                 <a href="https://wa.me/254736778694" class="cta-button whatsapp-btn" target="_blank" rel="noopener noreferrer">
                     <svg viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
-                    WhatsApp Us Airtel
+                    WhatsApp (Airtel)
                 </a>
-                 <a href="https://wa.me/254722618007" class="cta-button whatsapp-btn" target="_blank" rel="noopener noreferrer">
+                <a href="https://wa.me/254722618007" class="cta-button whatsapp-btn" target="_blank" rel="noopener noreferrer">
                     <svg viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
-                    WhatsApp Us Safaricom
+                    WhatsApp (Safaricom)
                 </a>
                 <a href="tel:+254736778694" class="cta-button secondary">
                     <svg viewBox="0 0 24 24"><path d="M20.01 15.38c-1.23 0-2.42-.2-3.53-.56a.977.977 0 00-1.01.24l-1.57 1.97c-2.83-1.35-5.48-3.9-6.89-6.83l1.95-1.66c.27-.28.35-.67.24-1.02-.37-1.11-.56-2.3-.56-3.53 0-.54-.45-.99-.99-.99H4.19C3.65 3 3 3.24 3 3.99 3 13.28 10.73 21 20.01 21c.71 0 .99-.63.99-1.18v-3.45c0-.54-.45-.99-.99-.99z"/></svg>
-                    Call Now Airtel
-                </a>
-                                <a href="tel:+254722618007" class="cta-button secondary">
-                    <svg viewBox="0 0 24 24"><path d="M20.01 15.38c-1.23 0-2.42-.2-3.53-.56a.977.977 0 00-1.01.24l-1.57 1.97c-2.83-1.35-5.48-3.9-6.89-6.83l1.95-1.66c.27-.28.35-.67.24-1.02-.37-1.11-.56-2.3-.56-3.53 0-.54-.45-.99-.99-.99H4.19C3.65 3 3 3.24 3 3.99 3 13.28 10.73 21 20.01 21c.71 0 .99-.63.99-1.18v-3.45c0-.54-.45-.99-.99-.99z"/></svg>
-                    Call Now Safaricom
-                </a>
-            </div>
-             <!-- <div class="cta-buttons2">
-               
-               <a href="https://wa.me/254722618007" class="cta-button whatsapp-btn" target="_blank" rel="noopener noreferrer">
-                    <svg viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
-                    WhatsApp Us Safaricom
+                    Call (Airtel)
                 </a>
                 <a href="tel:+254722618007" class="cta-button secondary">
                     <svg viewBox="0 0 24 24"><path d="M20.01 15.38c-1.23 0-2.42-.2-3.53-.56a.977.977 0 00-1.01.24l-1.57 1.97c-2.83-1.35-5.48-3.9-6.89-6.83l1.95-1.66c.27-.28.35-.67.24-1.02-.37-1.11-.56-2.3-.56-3.53 0-.54-.45-.99-.99-.99H4.19C3.65 3 3 3.24 3 3.99 3 13.28 10.73 21 20.01 21c.71 0 .99-.63.99-1.18v-3.45c0-.54-.45-.99-.99-.99z"/></svg>
-                    Call Now Safaricom
+                    Call (Safaricom)
                 </a>
-            </div> -->
+            </div>
         </div>
     </section>
 
@@ -94,7 +71,6 @@
         <h2>Our Services</h2>
         <div class="services-grid">
             <div class="service-card">
-                <img src="355c9273-9d79-4d98-8954-15cd5ecfc800.webp" alt="Exhauster Services" class="service-image">
                 <h3>Exhauster Services</h3>
                 <p>Professional waste management solutions for residential and commercial properties.</p>
                 <ul>
@@ -106,7 +82,6 @@
             </div>
 
             <div class="service-card">
-                <img src="construction-river-sand (1).webp" alt="Sand Supply" class="service-image">
                 <h3>Sand Supply</h3>
                 <p>High-quality construction sand for all your building needs.</p>
                 <ul>
@@ -118,7 +93,6 @@
             </div>
 
             <div class="service-card">
-                <img src="2-inch-ballast (1).webp" alt="Ballast" class="service-image">
                 <h3>Ballast</h3>
                 <p>Premium ballast for concrete mixing and construction projects.</p>
                 <ul>
@@ -130,7 +104,6 @@
             </div>
 
             <div class="service-card">
-                <img src="rocksand-0-4_2 (1).webp" alt="Rocksand" class="service-image">
                 <h3>Rocksand</h3>
                 <p>Durable rocksand ideal for foundations and heavy construction.</p>
                 <ul>
@@ -142,7 +115,6 @@
             </div>
 
             <div class="service-card">
-                <img src="machine+cut+stone (1).webp" alt="Machine Cut Stones" class="service-image">
                 <h3>Machine Cut Stones</h3>
                 <p>Precision-cut stones for quality construction work.</p>
                 <ul>
@@ -154,7 +126,6 @@
             </div>
 
             <div class="service-card">
-                <img src="6d842927-fd1b-42b4-9ed2-52722d935b6f.webp" alt="Transportation" class="service-image">
                 <h3>Transportation</h3>
                 <p>Reliable transportation services for all building materials.</p>
                 <ul>
@@ -192,15 +163,15 @@
         <h2>Contact Us</h2>
         <div class="contact-container">
             <div class="contact-info">
-                <div class="cta-buttons" style="margin-bottom: 2rem;">
-                    <a href="https://wa.me/254736778694" class="cta-button whatsapp-btn" target="_blank" rel="noopener noreferrer">
-                        <svg viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
-                        WhatsApp Us
-                    </a>
-                    <a href="tel:+254736778694" class="cta-button secondary">
+                <div class="contact-item">
+                    <div class="contact-icon">
                         <svg viewBox="0 0 24 24"><path d="M20.01 15.38c-1.23 0-2.42-.2-3.53-.56a.977.977 0 00-1.01.24l-1.57 1.97c-2.83-1.35-5.48-3.9-6.89-6.83l1.95-1.66c.27-.28.35-.67.24-1.02-.37-1.11-.56-2.3-.56-3.53 0-.54-.45-.99-.99-.99H4.19C3.65 3 3 3.24 3 3.99 3 13.28 10.73 21 20.01 21c.71 0 .99-.63.99-1.18v-3.45c0-.54-.45-.99-.99-.99z"/></svg>
-                        +254 736 778 694
-                    </a>
+                    </div>
+                    <div>
+                        <h4>Phone</h4>
+                        <p>+254 736 778 694 (Airtel)</p>
+                        <p>+254 722 618 007 (Safaricom)</p>
+                    </div>
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon">
@@ -224,7 +195,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="contact-form">
                 <div id="formMessage" class="form-message"></div>
                 <form id="contactForm">
@@ -259,6 +229,7 @@
 </body>
 
 </html>
+
 
 
 
