--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     </div>
                     <div>
                         <h4>Email</h4>
-                        <p>albertmuchene24@gmail.com</p>
+                        <p>almuwalimited@gmail.com</p>
                         <p>albertmuchene@yahoo.com</p>
                     </div>
                 </div>
@@ -229,6 +229,7 @@
 </body>
 
 </html>
+
 
 
 
