--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@
                         <label for="message">Message *</label>
                         <textarea id="message" name="message" rows="4" required></textarea>
                     </div>
-                    <button type="submit" class="submit-btn">Send Message</button>
+                          <button type="submit">Submit Form</button>
+                    <!-- <button type="submit" class="submit-btn">Send Message</button> -->
                 </form>
             </div>
         </div>
@@ -232,6 +233,7 @@
 </body>
 
 </html>
+
 
 
 
