--- a/index.html
+++ b/index.html
@@ -171,6 +171,14 @@
                         <h4>Phone</h4>
                         <p>+254 736 778 694 (Airtel)</p>
                         <p>+254 722 618 007 (Safaricom)</p>
+                        <a href="tel:+254736778694" class="cta-button secondary">
+                    <svg viewBox="0 0 24 24"><path d="M20.01 15.38c-1.23 0-2.42-.2-3.53-.56a.977.977 0 00-1.01.24l-1.57 1.97c-2.83-1.35-5.48-3.9-6.89-6.83l1.95-1.66c.27-.28.35-.67.24-1.02-.37-1.11-.56-2.3-.56-3.53 0-.54-.45-.99-.99-.99H4.19C3.65 3 3 3.24 3 3.99 3 13.28 10.73 21 20.01 21c.71 0 .99-.63.99-1.18v-3.45c0-.54-.45-.99-.99-.99z"/></svg>
+                    Call (Airtel)
+                </a>
+                <a href="tel:+254722618007" class="cta-button secondary">
+                    <svg viewBox="0 0 24 24"><path d="M20.01 15.38c-1.23 0-2.42-.2-3.53-.56a.977.977 0 00-1.01.24l-1.57 1.97c-2.83-1.35-5.48-3.9-6.89-6.83l1.95-1.66c.27-.28.35-.67.24-1.02-.37-1.11-.56-2.3-.56-3.53 0-.54-.45-.99-.99-.99H4.19C3.65 3 3 3.24 3 3.99 3 13.28 10.73 21 20.01 21c.71 0 .99-.63.99-1.18v-3.45c0-.54-.45-.99-.99-.99z"/></svg>
+                    Call (Safaricom)
+                </a>
                     </div>
                 </div>
                 <div class="contact-item">
@@ -300,4 +308,5 @@
 
 </html>
  
+
 
